Working on second Section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <main>
         <section class="hero-text">
@@ -17,7 +19,17 @@
             </div>
         </section>
 
-         
+        <section class="image-text">
+            <div class="top"> <!--good practice to keep images inside DIVs -->
+                <img src="ImageText.webp" alt="">
+            </div>
+
+            <div class="bottom">
+                <h1>Unleashing your Brand's Potential</h1>
+                <p>Comprehensive branding solutions that help your brand to reach the target audience.</p>
+            </div>
+        </section>
     </main>
 </body>
+
 </html>
