Completed Mobile View

--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
             <div class="bottom">
                 <h1>Unleashing your Brand's Potential</h1>
                 <p>Comprehensive branding solutions that help your brand to reach the target audience.</p>
+
+                <div class="services">
+                    <div class="service">
+                        <p>01</p>
+                        <p>BRANDING</p>
+                    </div>
+                    <hr>
+                    <div class="service">
+                        <p>02</p>
+                        <p>CAMPAIGNS</p>
+                    </div>
+                    <hr>
+                    <div class="service">
+                        <p>03</p>
+                        <p>SOCIAL MEDIA</p>
+                    </div>
+                    <div class="line"></div>
+                </div>
             </div>
         </section>
     </main>
